# pyearth

./: .gitignore  .pypirc  Doxyfile  LICENSE.md  MANIFEST.in  README.md  build_backend.py  environment.yml  meta.yaml  pyproject.toml  requirements.txt  setup.py  setup_cython_debug.py  text.py  verify_packages.py
.binder/: README.md  environment.yml
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: release.yml
click/: meta.yaml
docs/: Makefile  getting-started.rst  index.rst  make.bat  requirements.txt
docs/doxygen/html/: index.html  pages.html
docs/doxygen/latex/: refman.tex
docs/gis/: gis.rst
docs/source/: Doxyfile.in  api.rst  authors.rst  conf.py  conf_old.py  contribution.rst  faq.rst  getting-started.rst  index.rst  story.rst  support.rst
docs/source/_static/: .gitkeep
docs/source/algorithm/: api.rst
docs/visual/: visual.rst
envi/: envi_raster_binary_to_2d_array.py  envi_save_raster_header.py  envi_write_header.py
eslib/gis/cartopy/: cartopy_define_projection.py
eslib/gis/gdal/: gdal_read_envi_file.py  gdal_read_geotiff.py  gdal_write_envi_file.py  gdal_write_geotiff.py
eslib/system/: define_global_variables.py
eslib/toolbox/data/: add_variable_to_netcdf.py  remove_outliers.py
eslib/toolbox/date/: day_in_month.py  day_of_year.py
eslib/toolbox/geometry/: calculate_line_intersect_point.py
eslib/toolbox/math/: gap_fill_by_window.py
eslib/toolbox/reader/: read_configuration_file.py  split_string_into_chunk.py  text_reader_string.py
eslib/toolbox/slurm/: slurm_prepare_job_script_parafly.py  slurm_prepare_job_script_python.py  slurm_prepare_job_script_python_mpi.py  slurm_update_checkpoint_file.py  (+1 more)
gis/gdal/: gdal_read_envi.py  gdal_read_geotiff.py  gdal_read_shapefile.py  gdal_read_tiff.py  gdal_write_geotiff.py
pyearth/: meta.yaml
pyearth/system/: create_symlink.py  define_global_variables.py  filename.py  set_linker_directory.py
pyearth/visual/: calculate_ticks_space.py  create_line_style.py  formatter.py  plot_xy_data.py
pyes/: .gitignore
pyes/gis/: gis.py
pyes/system/: define_global_variables.py
pyes/unused/: str.py
pyes/visual/: plot_xy_data.py  plot_xy_data.py~
system/time/: day_of_year.py  day_of_year.py~
tests/: test_check_ccw_improvements.py
tests/example/: test.py  test_idl_split.py
toolbox/color/: choose_n_color.py
toolbox/date/: day_of_year.py  leap_year.py
toolbox/geometry/: calculate_line_intersect_point.py
toolbox/reader/: envi_raster_binary_to_2d_array.py  envi_write_header.py  gdal_read_tiff.py  test.py  text.py  text_reader_string.py
unused/: cartopy_define_projection2.py
(+386 files in other folders)
