[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel", "Cython>=0.29.0", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyearth"
version = "0.2.1"
description = "Python for Earth Science."
readme = "README.md"
requires-python = ">=3.9.0"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Chang Liao", email = "changliao.climate@gmail.com"}
]
keywords = ["Earth Science", "GIS", "Geospatial", "Scientific Computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy",
    "gdal",
    "netCDF4",
    "pandas",
    "scipy",
    "rtree",
    "geographiclib",
]

[project.urls]
Homepage = "https://github.com/changliao1025/pyearth"
Documentation = "https://pyearth.readthedocs.io"
Repository = "https://github.com/changliao1025/pyearth"
"Bug Tracker" = "https://github.com/changliao1025/pyearth/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "sphinx",
    "sphinx-rtd-theme",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyearth*"]
exclude = ["tests*", "docs*", "notebooks*"]

[tool.setuptools.package-data]
pyearth = ["*.pyx", "*.pxd", "*.c"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.cython]
language_level = 3
